Fixing spacing issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -49,7 +49,7 @@ h2 {
 
   h1 {
     font-size: 1.5rem;
-    margin-top: 5px;
+    margin: 20px 0;
 
     span {
       font-weight: 100;
@@ -127,7 +127,7 @@ h2 {
 TABLET MEDIA QUERIES
 */
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 554px) {
   .row {
     display: flex;
   }
@@ -144,7 +144,7 @@ TABLET MEDIA QUERIES
 /*
 LAPTOP MEDIA QUERIES
 */
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
   .resume {
     padding: 5%;
   }
@@ -173,5 +173,9 @@ LAPTOP MEDIA QUERIES
     h3 {
       margin-top: 0;
     }
+  }
+
+  .headshot {
+    max-width: 33%;
   }
 }
